Fix "alignment" of public server listing

--- a/src/main/sass/bits/_public-containers.scss
+++ b/src/main/sass/bits/_public-containers.scss
@@ -13,7 +13,7 @@
     text-align: left;
     margin: 0;
     color: #c8c8c8;
-    border-radius: 10px;
+    border-radius: 5px;
 
     %field {
       margin-right: 15px;
